# pylon-ros-camera

.github/workflows/: ci_noetic.yaml
g3i_camera_initializer/: CMakeLists.txt  package.xml
g3i_camera_initializer/include/g3i_camera_initializer/: camera_initializer.h
g3i_camera_initializer/src/: g3i_camera_initializer_node.cpp  main.cpp
g3i_camera_initializer_bringup/: CMakeLists.txt  package.xml
g3i_camera_initializer_bringup/launch/: g3i_camera_initializer.launch
pylon_camera/config/: default.yaml
pylon_camera/include/pylon_camera/: pylon_camera_node.h  pylon_camera_parameter.h
pylon_camera/include/pylon_camera/internal/impl/: pylon_camera_base.hpp
pylon_camera/launch/: pylon_camera_node.launch
pylon_camera/src/pylon_camera/: pylon_camera_node.cpp  pylon_camera_parameter.cpp
