<?xml version="1.0"?>
<package format="2">
  <name>g3i_camera_initializer</name>
  <version>0.0.0</version>
  <description>The g3i_camera_initializer package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="naoki.enomoto@grameye.com">Naoki Enomoto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>camera_control_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>camera_control_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>camera_control_msgs</exec_depend>
  <exec_depend>pylon_ros_camera</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>