<?xml version="1.0"?>
<package format="2">
  <name>g3i_camera_initializer_bringup</name>
  <version>0.0.0</version>
  <description>The g3i_camera_initializer_bringup package</description>

  <maintainer email="naoki.enomoto@grameye.com">Naoki Enomoto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>pylon_ros_camera</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
